# pdfino

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: mypy.yml  tests.yml
docs/: api.rst  conf.py  index.rst  integrations.rst  quickstart.rst  requirements.txt  templates.rst
pdfino/: __init__.py  canvas.py  django.py  main.py  platypus.py  styles.py  type_definitions.py  types.py  utils.py
tests/: test_django.py  test_main.py  test_styles.py  test_type_definitions.py  test_utils.py
